changed linux command